--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ keywords = ["api", "sdk", "targon"]
 classifiers = [
 ]
 authors = [
-    { name = "Manifold Labs", email = "support@manifold.inc" }
+    { name = "Manifold Labs", email = "dev@manifold.inc" }
 ]
 license = { file = "LICENSE" }
 
@@ -22,7 +22,20 @@ dependencies = [
     "keyring==25.6.0",
     "rich==14.1.0",
     "aiohttp>=3.8.0",
-    "cloudpickle>=2.0.0"
+    "cloudpickle>=2.0.0",
+    "PyYAML>=6.0",
+    "grpcio>=1.60.0",
+    "grpcio-health-checking>=1.60.0",
+    "grpcio-tools>=1.60.0",
+    "protobuf>=4.25.0"
+]
+
+[project.optional-dependencies]
+dev = [
+    "black>=24.0",
+    "flake8>=6.0",
+    "isort>=6.0",
+    "mypy>=1.5",
 ]
 
 [tool.setuptools.packages.find]
@@ -30,4 +43,19 @@ where = ["src"]
 
 [project.scripts]
 targon = "targon.cli.main:cli"
+
+[tool.pyright]
+typeCheckingMode = "basic"
+
+[tool.black]
+line-length = 88
+target-version = ['py39']
+skip-string-normalization = true
+
+[tool.isort]
+profile = "black"
+line_length = 88
+known_first_party = ["targon"]
+src_paths = ["src"]
+
 
