--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools~=80.9.0","wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "targon"
+name = "targon-sdk"
 version = "0.1.0"
 description = "Targon sdk to interacte with the targon rentals and serverless"
 readme = "README.md"
